# RetroLab

./: .dockerignore  .env.example  .gitignore  =6.0.0  Dockerfile.publisher  Dockerfile.web  Makefile  README.md  deploy-credentials.sh  docker-compose.server.yml  implementation_plan.md  make.ps1  next.config.mjs  notion-schema.txt  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: deploy-portfolio.yml  deploy-web.yml
Composer mockup/CMS Worker Management - Active Agents/: DESIGN.md  code.html
Composer mockup/cms_analytics_audience_overview/: code.html
LandingPage/: Dockerfile  index.html  nginx.conf  script.js  strip_icons.py  styles.css
MobileUIMockup/: README.md  metadata.json
public/: llms.txt  manifest.json
services/news-pipeline/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/news-pipeline/config/: settings.py  sources.yaml
services/news-pipeline/db/: crud.py  models.py
services/news-pipeline/db/migrations/: env.py
services/news-pipeline/db/migrations/versions/: 001_initial.py
services/news-pipeline/pipeline/: __init__.py  api.py  image_search.py  rewriter.py  scraper.py
services/news-pipeline/pipeline/discovery/: __init__.py  feed_poller.py  page_crawler.py
services/news-pipeline/pipeline/static/: curation.html
services/news-pipeline/tests/: test_feed_poller.py  test_page_crawler.py  test_rewriter.py  test_scraper.py
services/news-pipeline/tests/fixtures/html/: .gitkeep
services/news-pipeline/workers/: celery_app.py  tasks.py
src/: middleware.ts
(+162 files in other folders)
