[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "db", "pipeline", "workers"]


[project]
name = "news-pipeline"
version = "0.1.0"
description = "Automated news scraping, LLM rewriting, and editorial review pipeline"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=6.0.0",
    "celery[redis]>=5.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.9",
    "playwright>=1.44",
    "langdetect>=1.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "structlog>=24.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
